fixin some more