@@ -2,6 +2,8 @@ package com.paneedah.mwc.groovyscript.script;
 
 import com.cleanroommc.groovyscript.api.GroovyLog;
 import com.cleanroommc.groovyscript.api.IIngredient;
+import com.cleanroommc.groovyscript.helper.ingredient.ItemsIngredient;
+import com.cleanroommc.groovyscript.helper.ingredient.OreDictIngredient;
 import com.cleanroommc.groovyscript.helper.recipe.AbstractRecipeBuilder;
 import com.cleanroommc.groovyscript.registry.VirtualizedRegistry;
 import com.paneedah.mwc.groovyscript.MWCContainer;
@@ -11,14 +13,16 @@ import com.paneedah.weaponlib.crafting.CraftingGroup;
 import com.paneedah.weaponlib.crafting.CraftingRegistry;
 import com.paneedah.weaponlib.crafting.IModernCrafting;
 import net.minecraft.item.ItemStack;
+import net.minecraft.item.crafting.Ingredient;
 import net.minecraftforge.oredict.OreDictionary;
 
 import java.util.ArrayList;
+import java.util.Collection;
 
 import static com.paneedah.weaponlib.crafting.CraftingGroup.*;
 import static com.paneedah.weaponlib.crafting.CraftingRegistry.*;
 
-public class CraftingStation extends VirtualizedRegistry<GSCrafting> {
+public class CraftingStation extends VirtualizedRegistry<IModernCrafting> {
 
     @Override
     public void onReload() {
@@ -26,32 +30,42 @@ public class CraftingStation extends VirtualizedRegistry<GSCrafting> {
         this.restoreFromBackup().forEach(CraftingRegistry::registerRecipe);
     }
 
+    /**
+     * Remove ALL recipes. no matter the category.
+     */
 
-    //Nuke ALL recipes. no matter the category.
-
-    public void removeAll(){
+    public void removeAll() {
         clearRegistry();
     }
 
-    //Remove Recipe that outputs given Ingredient.
+    /**
+     * Remove Recipe that outputs given Ingredient.
+     *
+     * @param ingredient Target Ingredient. any recipe with matching output will be removed.
+     */
 
-    public void remove(IIngredient ingredient){
-        for(ArrayList<IModernCrafting> list:craftingMap.values()){
-            for(IModernCrafting recipe: list){
-                if(ingredient.test(new ItemStack(recipe.getItem()))){
+    public void remove(IIngredient ingredient) {
+        for (ArrayList<IModernCrafting> list : craftingMap.values()) {
+            for (IModernCrafting recipe : list) {
+                if (ingredient.test(new ItemStack(recipe.getItem()))) {
                     deleteRecipeRegistry(recipe);
+                    this.addBackup(recipe);
                 }
             }
         }
     }
 
-    //Nuke ALL recipes of Given Category.
+    /**
+     * Remove ALL recipes of Given Category.
+     *
+     * @param group CraftingGroup to remove all recipes inside.
+     */
 
-    public void removeAllinGroup(CraftingGroup group){
+    public void removeAllinGroup(CraftingGroup group) {
         clearGroup(group);
     }
 
-    public void removeAllinGroup(String group){
+    public void removeAllinGroup(String group) {
         clearGroup(CraftingGroup.valueOf(group));
     }
 
@@ -59,6 +73,7 @@ public class CraftingStation extends VirtualizedRegistry<GSCrafting> {
         for (IModernCrafting recipe : craftingMap.get(group)) {
             if (ingredient.test(new ItemStack(recipe.getItem()))) {
                 deleteRecipeRegistry(recipe);
+                this.addBackup(recipe);
             }
         }
     }
@@ -67,109 +82,92 @@ public class CraftingStation extends VirtualizedRegistry<GSCrafting> {
         removeinGroup(ingredient, CraftingGroup.valueOf(group));
     }
 
-    public void addRecipe(IModernCrafting crafting){
+    public void addRecipe(IModernCrafting crafting) {
         registerRecipe(crafting);
+        this.addScripted(crafting);
     }
 
-    //Start Recipe Builder
+    /**
+     * Start Recipe Builder for GroovyScript.
+     */
 
-    public RecipeBuilder recipeBuilder(){
+    public RecipeBuilder recipeBuilder() {
         return new RecipeBuilder();
     }
 
-    public static class RecipeBuilder extends AbstractRecipeBuilder<GSCrafting>{
+    public static class RecipeBuilder extends AbstractRecipeBuilder<GSCrafting> {
 
         @Override
         public String getErrorMsg() {
-            return "Error adding Workbench Recipe";
-        }
-
-        private final ArrayList<CraftingEntry> entries = new ArrayList<>();
-        private CraftingGroup group = GUN;
-
-        //Add Ingredient of recipe With ItemStack
-
-        public RecipeBuilder addEntry(ItemStack stack){
-            return addEntry(stack, 1);
-        }
-
-        //Add Ingredient of recipe With Ore Dictionary Value
-
-        public RecipeBuilder addOredict(String entry, int count){
-            return addOredict(entry, count, 1);
-        }
-
-        //Add Ingredient of recipe With given ItemStack and yield(0.0~1.0)
-
-        public RecipeBuilder addEntry(ItemStack stack, double yield){
-            this.entries.add(new CraftingEntry(stack.getItem(), stack.getCount(), yield));
-            return this;
-        }
-
-        //Add Ingredient of recipe With given Ore Dictionary Entry and yield(0.0~1.0)
-
-
-        public RecipeBuilder addOredict(String entry, int count, double yield){
-            this.entries.add(new CraftingEntry(OreDictionary.getOres(entry).get(0).getItem(),entry, count, yield));
-            return this;
-        }
-
-        //Set Category of Recipe
-        public RecipeBuilder group(String group){
-            this.group = CraftingGroup.valueOf(group);
-            return this;
-        }
-
-        public RecipeBuilder groupGun(){
-            this.group = GUN;
-            return this;
-        }
-
-        public RecipeBuilder groupNormalAttachment(){
-            this.group = ATTACHMENT_NORMAL;
-            return this;
-        }
-
-        public RecipeBuilder groupModificationAttachment(){
-            this.group = ATTACHMENT_MODIFICATION;
-            return this;
-        }
-
-        public RecipeBuilder groupBullet(){
-            this.group = BULLET;
-            return this;
-        }
-
-        public RecipeBuilder groupMagazine(){
-            this.group = MAGAZINE;
-            return this;
-        }
-
-        public RecipeBuilder groupGranade(){
-            this.group = GRENADE;
-            return this;
-        }
-
-        public RecipeBuilder groupGear(){
-            this.group = GEAR;
-            return this;
+            return "Error adding Modern Warefare Cubed Workbench Recipe";
         }
 
         @Override
         public void validate(GroovyLog.Msg msg) {
-            validateItems(msg, 0,0,1,1);
-            msg.add(this.entries.isEmpty() ,"Ingredient for Crafting Recipe can not be empty.");
+
         }
 
-        //and we finalize the recipe and register it!
+        private final ArrayList<Double> yields = new ArrayList<>();
+        private double yield = 1.0;
+
+        private CraftingGroup group = GUN;
+
+        /**
+         * Add Ingredient of recipe With ItemStack
+         *
+         * @param ingredient crafting ingredient
+         * @return AbstractRecipeBuilder
+         */
+        @Override
+        public AbstractRecipeBuilder<GSCrafting> input(IIngredient ingredient) {
+            this.yields.add(this.yield);
+            return super.input(ingredient);
+        }
+
+        public RecipeBuilder setYield(double yield) {
+            this.yield = yield;
+            return this;
+        }
+
+        /**
+         * Set Category of Recipe
+         *
+         * @param group: name of the Group
+         * @return this RecipeBuilder
+         */
+        public RecipeBuilder group(String group) {
+            this.group = CraftingGroup.valueOf(group);
+            return this;
+        }
+
+        /**
+         * Finalize the recipe and register it
+         *
+         * @return Finished Recipe
+         */
 
         @Override
         public GSCrafting register() {
-            if(!this.validate()){
+            if (!this.validate()) {
                 return null;
             }
-            GSCrafting recipe = new GSCrafting(this.output.get(0).getItem(), this.group, this.entries.toArray(new CraftingEntry[0]));
-            MWCContainer.MWC.get().STATION.addRecipe(recipe);
+
+            ArrayList<CraftingEntry> entries = new ArrayList<>();
+
+            int i = 0;
+
+            for (IIngredient ingredient : this.input) {
+                i++;
+                if (ingredient instanceof OreDictIngredient) {
+                    OreDictIngredient dict = (OreDictIngredient) ingredient;
+                    entries.add(new CraftingEntry(dict.getFirst().getItem(), dict.getOreDict(), dict.getAmount(), this.yields.get(i)));
+                } else if (ingredient instanceof ItemsIngredient) {
+                    ItemsIngredient item = (ItemsIngredient) ingredient;
+                    entries.add(new CraftingEntry(item.getMatchingStacks()[0].getItem(), item.getAmount(), this.yields.get(i)));
+                }
+            }
+            GSCrafting recipe = new GSCrafting(this.output.get(0).getItem(), this.group, entries.toArray(new CraftingEntry[0]));
+            MWCContainer.MWC.get().craftingStation.addRecipe(recipe);
             return recipe;
         }
     }
